--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,31 +2,16 @@ pipeline {
     agent any
 
     stages {
-        stage('Checkout Code') {
+        stage('Checkout') {
             steps {
                 git 'https://github.com/24p1245-ssk/Weather-App.git'
             }
         }
 
-        stage('Build') {
+        stage('Done') {
             steps {
-                echo 'Building the project...'
+                echo 'Build completed'
             }
-        }
-
-        stage('Test') {
-            steps {
-                echo 'Running tests...'
-            }
-        }
-    }
-
-    post {
-        success {
-            echo 'Pipeline completed successfully!'
-        }
-        failure {
-            echo 'Pipeline failed!'
         }
     }
 }
